# 2DGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp
